# platform.core.appfw.appcore-widget

./: AUTHORS  CMakeLists.txt  capi-appfw-widget-application.pc  project.config
doc/: appcore-widget_doc.h
include/: widget_app.h  widget_app_efl.h  widget_app_internal.h
launchpad_src/: widget_loader.c
packaging/: appcore-widget.spec
src/: widget-i18n.c  widget-log.h  widget-private.h  widget_app.c  widget_app_internal.c  widget_error.c
